# hexdec

./: decode.html  index.html  main.py  pyproject.toml  style.css
static/: clock.css  script.js  style.css
templates/: decode.html  index (copy).html
